[package]
name = "sysmon"
version = "0.1.0"
edition = "2024"
authors = ["The Doctor", "thedoctor095@yahoo.com"]
readme = "README.md"
repository = "https://github.com/thedoctor095/sysmon-rs"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
configparser = "3.1.0"
reqwest = { version = "0.12.22", features = ["blocking"] }
sysinfo = "0.36.1"
url = "2.5.4"
